--- a/VI Socket/BT13/.vscode/settings.json
+++ b/VI Socket/BT13/.vscode/settings.json
@@ -3,6 +3,9 @@
         "in.h": "c",
         "socket.h": "c",
         "cstdlib": "c",
-        "stdlib.h": "c"
+        "stdlib.h": "c",
+        "string.h": "c",
+        "unistd.h": "c",
+        "types.h": "c"
     }
 }
