update VII BT14

--- a/VII Pipe and FIFO/BT15 FIFO/makefile
+++ b/VII Pipe and FIFO/BT15 FIFO/makefile
@@ -1,6 +1,5 @@
-.PHONY: clean client server
+.PHONY: clean a b run_a run_b build_a build_b
 
-A := .
 CUR_DIR := .
 BIN_DIR := $(CUR_DIR)/bin
 LIB_DIR := $(CUR_DIR)/lib
@@ -10,8 +9,8 @@ OBJ_DIR := $(CUR_DIR)/obj
 INC_DIR := $(CUR_DIR)/inc
 SRC_DIR := $(CUR_DIR)/src
 COMPILER := gcc
-MAIN_CLIENT_O_DIR := $(OBJ_DIR)/main_client.o
-MAIN_SERVER_O_DIR := $(OBJ_DIR)/main_server.o
+MAIN_PROCESS_A_O_DIR := $(OBJ_DIR)/main_ProcessA.o
+MAIN_PROCESS_B_O_DIR := $(OBJ_DIR)/main_ProcessB.o
 
 SRC_FILES := $(foreach SRC_DIR, $(SRC_DIR), $(wildcard $(SRC_DIR)/*.c))
 INC_FILES := $(foreach INC_DIR, $(INC_DIR), $(wildcard $(INC_DIR)/*.h))
@@ -19,37 +18,37 @@ INC_FILES := $(foreach INC_DIR, $(INC_DIR), $(wildcard $(INC_DIR)/*.h))
 OBJ_FILES := $(notdir $(SRC_FILES))
 OBJ_FILES := $(subst .c,.o, $(OBJ_FILES))
 PATH_CLIENT_OBJS := $(foreach OBJ_FILES, $(OBJ_FILES), $(OBJ_DIR)/$(OBJ_FILES))
-PATH_CLIENT_OBJS += $(MAIN_CLIENT_O_DIR)
+PATH_CLIENT_OBJS += $(MAIN_PROCESS_A_O_DIR)
 PATH_SERVER_OBJS := $(foreach OBJ_FILES, $(OBJ_FILES), $(OBJ_DIR)/$(OBJ_FILES))
-PATH_SERVER_OBJS += $(MAIN_SERVER_O_DIR)
+PATH_SERVER_OBJS += $(MAIN_PROCESS_B_O_DIR)
 
 vpath %.c $(SRC_DIR)
 vpath %.h $(INC_DIR)
 
-build_client: $(OBJ_FILES) main_client.o
-	@$(COMPILER) $(PATH_CLIENT_OBJS) -o $(BIN_DIR)/client
+build_a: $(OBJ_FILES) main_ProcessA.o
+	@$(COMPILER) $(PATH_CLIENT_OBJS) -o $(BIN_DIR)/a
 
-build_server: $(OBJ_FILES) main_server.o
-	@$(COMPILER) $(PATH_SERVER_OBJS) -o $(BIN_DIR)/server
+build_b: $(OBJ_FILES) main_ProcessB.o
+	@$(COMPILER) $(PATH_SERVER_OBJS) -o $(BIN_DIR)/b
 
 %.o: %.c $(INC_FILES)
 	@$(COMPILER) -I$(INC_DIR) -c $< -o $(OBJ_DIR)/$@
 
-main_client.o:
-	@$(COMPILER) -I$(INC_DIR) -c main_client.c -o $(CUR_DIR)/$(OBJ_DIR)/main_client.o
+main_ProcessA.o:
+	@$(COMPILER) -I$(INC_DIR) -c main_ProcessA.c -o $(CUR_DIR)/$(OBJ_DIR)/main_ProcessA.o
 
-main_server.o:
-	@$(COMPILER) -I$(INC_DIR) -c main_server.c -o $(CUR_DIR)/$(OBJ_DIR)/main_server.o
+main_ProcessB.o:
+	@$(COMPILER) -I$(INC_DIR) -c main_ProcessB.c -o $(CUR_DIR)/$(OBJ_DIR)/main_ProcessB.o
 
-run_client:
-	@$(BIN_DIR)/client
+run_a:
+	@$(BIN_DIR)/a
 
-run_server:
-	@$(BIN_DIR)/server
+run_b:
+	@$(BIN_DIR)/b
 
-client: clean build_client run_client
+a: clean build_a run_a
 
-server: clean build_server run_server
+b: clean build_b run_b
 
 clean:
 	@rm -rf $(OBJ_DIR)/*.o
