update cond variable

--- a/IX Message Queue/BT17 Message Queue/.vscode/settings.json
+++ b/IX Message Queue/BT17 Message Queue/.vscode/settings.json
@@ -8,6 +8,9 @@
         "unistd.h": "c",
         "stdlib.h": "c",
         "stddef.h": "c",
-        "menu.h": "c"
+        "menu.h": "c",
+        "errno.h": "c",
+        "signal.h": "c",
+        "syscall.h": "c"
     }
 }
