--- a/Mock 1/.vscode/settings.json
+++ b/Mock 1/.vscode/settings.json
@@ -7,7 +7,8 @@
         "pthread.h": "c",
         "stdlib.h": "c",
         "libc-header-start.h": "c",
-        "in.h": "c"
+        "in.h": "c",
+        "process_list.h": "c"
     },
     "C_Cpp.errorSquiggles": "enabled",
     "C_Cpp.default.includePath": [
