--- a/Mock 1/.vscode/launch.json
+++ b/Mock 1/.vscode/launch.json
@@ -21,18 +21,19 @@
                     "text": "-enable-pretty-printing",
                     "ignoreFailures": true
                 },
-                {
-                    // https://sourceware.org/gdb/onlinedocs/gdb/Forks.html
-                    "description": "Fork follows Child process",
-                    "text": "set follow-fork-mode child",
-                    "ignoreFailures": true
-                },
-                {
-                    // https://sourceware.org/gdb/onlinedocs/gdb/Forks.html
-                    "description": "Fork will keep the other process attached to debugger",
-                    "text": "set detach-on-fork off",
-                    "ignoreFailures": true
-                }
+                // {
+                //     // https://sourceware.org/gdb/onlinedocs/gdb/Forks.html
+                //     "description": "Fork follows Child process",
+                //     "text": "set follow-fork-mode child",
+                //     "ignoreFailures": true
+                // },
+                // {
+                //     // https://sourceware.org/gdb/onlinedocs/gdb/Forks.html
+                //     "description": "Fork will keep the other process attached to debugger",
+                //     "text": "set detach-on-fork off",
+                //     "ignoreFailures": true
+                // }
+                
             ],
             "preLaunchTask": "C/C++: gcc build active file"
         }
