--- a/Mock 1/.vscode/tasks.json
+++ b/Mock 1/.vscode/tasks.json
@@ -16,7 +16,8 @@
                 "${fileDirname}/src/random.c",
                 "${fileDirname}/src/process_list.c",
                 //"${fileDirname}/src/sql.c",
-                "-pthread"
+                "-pthread",
+                "-lm"
             ],
             "options": {
                 "cwd": "${workspaceFolder}"
