--- a/Mock 1/.vscode/tasks.json
+++ b/Mock 1/.vscode/tasks.json
@@ -15,9 +15,10 @@
                 "${fileDirname}/src/log.c",
                 "${fileDirname}/src/random.c",
                 "${fileDirname}/src/process_list.c",
-                //"${fileDirname}/src/sql.c",
+                "${fileDirname}/src/sql.c",
                 "-pthread",
-                "-lm"
+                "-lm",
+                "-lsqlite3"
             ],
             "options": {
                 "cwd": "${workspaceFolder}"
