--- a/Device_Tree/.vscode/settings.json
+++ b/Device_Tree/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
     "files.associations": {
-        "gpio.h": "c"
+        "gpio.h": "c",
+        "i2c.h": "c",
+        "kernel.h": "c",
+        "fs.h": "c",
+        "version.h": "c"
     }
 }
