update BMP180 without device tree

--- a/XIII_I2C_BPM180/Makefile
+++ b/XIII_I2C_BPM180/Makefile
@@ -1,13 +1,14 @@
-# PWM Driver Legacy
-BBB_KERNEL := /home/quangnm/Desktop/buildBBB/kernelbuildscripts/KERNEL
-TOOLCHAIN := /home/quangnm/Desktop/buildBBB/kernelbuildscripts/dl/gcc-8.5.0-nolibc/arm-linux-gnueabi/bin/arm-linux-gnueabi-
-FILE_NAME := i2c
-obj-m := $(FILE_NAME).o
+# BMP Driver
+BUIL_BBB_DIR := /home/quangnm/Desktop/buildBBB/kernelbuildscripts
+BBB_KERNEL := $(BUIL_BBB_DIR)/KERNEL
+TOOLCHAIN := $(BUIL_BBB_DIR)/dl/gcc-8.5.0-nolibc/arm-linux-gnueabi/bin/arm-linux-gnueabi-
 
-all:
-	make ARCH=arm CROSS_COMPILE=$(TOOLCHAIN) -C $(BBB_KERNEL) M=$(shell pwd) modules
-	
+C_FILE_NAME	:= bmp180
+obj-m := $(C_FILE_NAME).o
 clean:
-	make -C $(BBB_KERNEL) M=$(shell pwd) clean
+	@make -C $(BBB_KERNEL) M=$(shell pwd) clean
+
+all: clean
+	@make ARCH=arm CROSS_COMPILE=$(TOOLCHAIN) -C $(BBB_KERNEL) M=$(shell pwd) modules
 
 again: clean all
