update I2c bmp180 device tree

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,9 @@
     "files.associations": {
         "limits": "c",
         "type_traits": "c",
-        "api": "c"
+        "api": "c",
+        "time.h": "c",
+        "unistd.h": "c",
+        "i2c.h": "c"
     }
 }
