--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "api": "c",
         "time.h": "c",
         "unistd.h": "c",
-        "i2c.h": "c"
+        "i2c.h": "c",
+        "gpio.h": "c"
     }
 }
