--- a/Device_Tree/GPIO_DeviceTree/MultiGPIO_Overlay/testoverlay.dts
+++ b/Device_Tree/GPIO_DeviceTree/MultiGPIO_Overlay/testoverlay.dts
@@ -8,24 +8,47 @@ LED4  ---------------------- GPIO0_05       GPIO_05
 LED5  ---------------------- GPIO0_03       GPIO_03
 */
 
+// &i2c1 {
+//     status = "disabled";
+// };
+
+// &spi0 {
+//     status = "disabled";
+// };
+
+// &uart4 {
+//     status = "disabled";
+// };
+
+// &uart2 {
+//     status = "disabled";
+// };
+
 /{
     compatible = "ti,am335x";
-    fragment@0 {
+    fragment@1 {
         target-path = "/";
         __overlay__ {
-            MyGPIOCLuster {
-                compatible = "QuangNM13,GPIO";
+            MyGPIOCluster {
+                compatible = "QuangNM13,MultiGPIO";
                 author = "QuangNM13";
                 status = "okay";
-                
-                gpio_pin-gpio = <&gpio0 30 0
-                                &gpio0 31 0
-                                &gpio1 16 0
-                                &gpio0 5 0
-                                &gpio0 3 0>;
+                gpio_pin-gpio = <&gpio0 30 0>,
+                                <&gpio0 31 0>,
+                                <&gpio1 16 0>,
+                                <&gpio0 5 0>,
+                                <&gpio0 3 0>;
                 // pinctrl-names = "default", "gpio";
-		        // pinctrl-0 = <&state_0_node_a>;
-		        // pinctrl-1 = <&state_1_node_a>,
+		        // pinctrl-0 = <&P9_11_default_pin>,
+                //             <&P9_13_default_pin>,
+                //             <&P9_15_default_pin>,
+                //             <&P9_17_default_pin>,
+                //             <&P9_21_default_pin>;
+		        // pinctrl-1 = <&P9_11_gpio_pin>,
+                //             <&P9_13_gpio_pin>,
+                //             <&P9_15_gpio_pin>,
+                //             <&P9_17_gpio_pin>,
+                //             <&P9_21_gpio_pin>;
             };
         }; 
     };
