--- a/Device_Tree/GPIO_DeviceTree/GPIO_DeviceTree/Makefile
+++ b/Device_Tree/GPIO_DeviceTree/GPIO_DeviceTree/Makefile
@@ -3,7 +3,7 @@ BUIL_BBB_DIR := /home/quangnm/Desktop/buildBBB/kernelbuildscripts
 BBB_KERNEL := $(BUIL_BBB_DIR)/KERNEL
 TOOLCHAIN := $(BUIL_BBB_DIR)/dl/gcc-8.5.0-nolibc/arm-linux-gnueabi/bin/arm-linux-gnueabi-
 
-C_FILE_NAME	:= gpios
+C_FILE_NAME	:= GPIO_DeviceTree
 obj-m := $(C_FILE_NAME).o
 clean:
 	@make -C $(BBB_KERNEL) M=$(shell pwd) clean
