--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "unistd.h": "c",
         "i2c.h": "c",
         "gpio.h": "c",
-        "string.h": "c"
+        "string.h": "c",
+        "module.h": "c"
     }
 }
