--- a/Device_Tree/GPIO_DeviceTree/GPIO_Overlay/GPIO_Overlay.dts
+++ b/Device_Tree/GPIO_DeviceTree/GPIO_Overlay/GPIO_Overlay.dts
@@ -7,53 +7,50 @@ LED3  ---------------------- GPIO1_16       GPIO_48
 LED4  ---------------------- GPIO0_05       GPIO_05
 LED5  ---------------------- GPIO0_03       GPIO_03
 */
-// #define OMAP_IOPAD_OFFSET(pa, offset)	    (((pa) & 0xffff) - (offset))
-// #define AM33XX_IOPAD(pa, val)		        OMAP_IOPAD_OFFSET((pa), 0x0800) (val) (0)
-// #define PULL_UP			                    1 << 4)
-// #define PIN_OUTPUT_PULLUP	                (PULL_UP)
-// #define INPUT_EN		                    1 << 8)
-// #define MUX_MODE7	                        7
-// #define PIN_OUTPUT		                    0
-// #define PULL_ENA		                    1 << 3)
-// #define PIN_OUTPUT_PULLDOWN	                (PIN_OUTPUT | PULL_ENA)
+
 
 /{
-    compatible = "ti,am335x-bone-black";
+    compatible = "ti,am33xx";
     fragment@0 {
+            target = <&am33xx_pinmux>;
+            __overlay__ {
+                default_setting: default_setting {
+                    pinctrl-single,pins = <
+                        0x70  (1 << 4 | 1 << 8 | 7)
+                        0x74  (1 << 4 | 1 << 8 | 7)
+                        0x40  (1 << 3 | 1 << 8 | 7)
+                        0x15c (1 << 4 | 1 << 8 | 7)
+                        0x154 (1 << 4 | 1 << 8 | 7)
+                    >;
+                };
+
+                gpio_setting: gpio_setting {
+                    pinctrl-single,pins = <
+                        0x70  (0 | 1 << 8 | 7)
+                        0x74  (0 | 1 << 8 | 7)
+                        0x40  (0 | 1 << 8 | 7)
+                        0x15c (0 | 1 << 8 | 7)
+                        0x154 (0 | 1 << 8 | 7)
+                    >;
+                };
+            };
+    };
+
+    fragment@1 {
         target-path = "/";
         __overlay__ {
-            DefaultSetting: default_setting{
-                pinctrl-single,pins = <
-                    0x70  (1 << 4 | 1 << 8 | 7)
-                    0x74  (1 << 4 | 1 << 8 | 7)
-                    0x40  (1 << 3 | 1 << 8 | 7)
-                    0x15c (1 << 4 | 1 << 8 | 7)
-                    0x154 (1 << 4 | 1 << 8 | 7)
-                >;
-            };
-
-            GPIOSetting: gpio_setting{
-                pinctrl-single,pins = <
-                    0x70  (0 | 1 << 8 | 7)
-                    0x74  (0 | 1 << 8 | 7)
-                    0x40  (0 | 1 << 8 | 7)
-                    0x15c (0 | 1 << 8 | 7)
-                    0x154 (0 | 1 << 8 | 7)
-                >;
-            };
-
             MyGPIOCluster {
-                compatible = "QuangNM13,MultiGPIO";
+                compatible = "MultiGPIO_Devicetree";
                 author = "QuangNM13";
                 status = "okay";
-                gpio_pin-gpio = <&gpio0 30 0>,
+                gpio_pin-gpios = <&gpio0 30 0>,
                                 <&gpio0 31 0>,
                                 <&gpio1 16 0>,
                                 <&gpio0 5 0>,
                                 <&gpio0 3 0>;
                 pinctrl-names = "default", "gpio";
-		        pinctrl-0 = <&DefaultSetting>;
-		        pinctrl-1 = <&GPIOSetting>;
+		        pinctrl-0 = <&default_setting>;
+		        pinctrl-1 = <&gpio_setting>;
             };
         }; 
     };
