--- a/Device_Tree/I2c_DeviceTree/MPU6050_Overlay/Makefile
+++ b/Device_Tree/I2c_DeviceTree/MPU6050_Overlay/Makefile
@@ -1,8 +1,8 @@
-# Gpio Driver Legacy
+# MPU6050 Driver
 BBB_KERNEL := /home/quangnm/Desktop/buildBBB/kernelbuildscripts/KERNEL
 TOOLCHAIN := /home/quangnm/Desktop/buildBBB/kernelbuildscripts/dl/gcc-8.5.0-nolibc/arm-linux-gnueabi/bin/arm-linux-gnueabi-
-DEVICE_TREE_MODULE := mpu6050Overlay
-C_FILE_NAME	:= mpu6050
+DEVICE_TREE_MODULE := MPU6050_Overlay
+C_FILE_NAME	:= MPU6050_Overlay
 obj-m := $(C_FILE_NAME).o
 BEAGLEBONE_PASSWORD := temppwd
 BEAGLEBONE_IP := 192.168.16.103
@@ -16,6 +16,8 @@ all:
 	rm -rf $(DEVICE_TREE_MODULE).dtbo
 	make ARCH=arm CROSS_COMPILE=$(TOOLCHAIN) -C $(BBB_KERNEL) M=$(shell pwd) modules
 	dtc -@ -I dts -O dtb -o $(DEVICE_TREE_MODULE).dtbo $(DEVICE_TREE_MODULE).dts
+	
+move:
 	sshpass -p $(BEAGLEBONE_PASSWORD) scp $(DEVICE_TREE_MODULE).dtbo $(BEAGLEBONE_HOME_PATH)
 	sshpass -p $(BEAGLEBONE_PASSWORD) scp $(C_FILE_NAME).ko $(BEAGLEBONE_HOME_PATH)
 
