--- a/Device_Tree/I2c_DeviceTree/BMP180_Overlay/Makefile
+++ b/Device_Tree/I2c_DeviceTree/BMP180_Overlay/Makefile
@@ -1,14 +1,28 @@
-# BMP Driver
-BUIL_BBB_DIR := /home/quangnm/Desktop/buildBBB/kernelbuildscripts
-BBB_KERNEL := $(BUIL_BBB_DIR)/KERNEL
-TOOLCHAIN := $(BUIL_BBB_DIR)/dl/gcc-8.5.0-nolibc/arm-linux-gnueabi/bin/arm-linux-gnueabi-
-
-C_FILE_NAME	:= bmp180
+# BMP180 Driver
+BBB_KERNEL := /home/quangnm/Desktop/buildBBB/kernelbuildscripts/KERNEL
+TOOLCHAIN := /home/quangnm/Desktop/buildBBB/kernelbuildscripts/dl/gcc-8.5.0-nolibc/arm-linux-gnueabi/bin/arm-linux-gnueabi-
+DEVICE_TREE_MODULE := BMP180_Overlay
+C_FILE_NAME	:= BMP180_Overlay
 obj-m := $(C_FILE_NAME).o
+BEAGLEBONE_PASSWORD := temppwd
+BEAGLEBONE_IP := 192.168.16.103
+BEAGLEBONE_HOME_PATH := debian@$(BEAGLEBONE_IP):/home/debian
+
+dt: $(DEVICE_TREE_MODULE).dts
+	@dtc -@ -I dts -O dtb -o $(DEVICE_TREE_MODULE).dtbo $(DEVICE_TREE_MODULE).dts
+
+all:
+	@make -C $(BBB_KERNEL) M=$(shell pwd) clean
+	@rm -rf $(DEVICE_TREE_MODULE).dtbo
+	@make ARCH=arm CROSS_COMPILE=$(TOOLCHAIN) -C $(BBB_KERNEL) M=$(shell pwd) modules
+	@dtc -@ -I dts -O dtb -o $(DEVICE_TREE_MODULE).dtbo $(DEVICE_TREE_MODULE).dts
+
+move:
+	@sshpass -p $(BEAGLEBONE_PASSWORD) scp $(DEVICE_TREE_MODULE).dtbo $(BEAGLEBONE_HOME_PATH)
+	@sshpass -p $(BEAGLEBONE_PASSWORD) scp $(C_FILE_NAME).ko $(BEAGLEBONE_HOME_PATH)
+
 clean:
 	@make -C $(BBB_KERNEL) M=$(shell pwd) clean
-
-all: clean
-	@make ARCH=arm CROSS_COMPILE=$(TOOLCHAIN) -C $(BBB_KERNEL) M=$(shell pwd) modules
+	@rm -rf $(DEVICE_TREE_MODULE).dtbo
 
 again: clean all
