--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "i2c.h": "c",
         "gpio.h": "c",
         "string.h": "c",
-        "module.h": "c"
+        "module.h": "c",
+        "fs.h": "c"
     }
 }
