--- a/XIII_Interrupt/Interrupt_Legacy/Interrupt_Legacy.dts
+++ b/XIII_Interrupt/Interrupt_Legacy/Interrupt_Legacy.dts
@@ -5,7 +5,7 @@ SW1  ---------------------- GPIO0_30       GPIO_30
 SW1  ---------------------- GPIO0_31       GPIO_31
 SW1  ---------------------- GPIO1_16       GPIO_48
 SW1  ---------------------- GPIO0_05       GPIO_05
-SW1  ---------------------- GPIO0_13       GPIO_13
+SW1  ---------------------- GPIO0_03       GPIO_03
 */
 
 /{
@@ -15,21 +15,11 @@ SW1  ---------------------- GPIO0_13       GPIO_13
             __overlay__ {
                 default_setting: default_setting {
                     pinctrl-single,pins = <
-                        0x70  (1 << 4 | 1 << 8 | 7)
-                        0x74  (1 << 4 | 1 << 8 | 7)
-                        0x40  (1 << 3 | 1 << 8 | 7)
-                        0x15c (1 << 4 | 1 << 8 | 7)
-                        0x17c (1 << 4 | 1 << 8 | 7)
-                    >;
-                };
-
-                gpio_setting: gpio_setting {
-                    pinctrl-single,pins = <
-                        0x70  (0 | 1 << 8 | 7)
-                        0x74  (0 | 1 << 8 | 7)
-                        0x40  (0 | 1 << 8 | 7)
-                        0x15c (0 | 1 << 8 | 7)
-                        0x17c (0 | 1 << 8 | 7)
+                        0x70  (1 << 3 | 1 << 5 | 7)
+                        0x74  (1 << 3 | 1 << 5 | 7)
+                        0x40  (1 << 3 | 1 << 5 | 7)
+                        0x15c (1 << 3 | 1 << 5 | 7)
+                        0x154 (1 << 3 | 1 << 5 | 7)
                     >;
                 };
             };
@@ -47,9 +37,8 @@ SW1  ---------------------- GPIO0_13       GPIO_13
                                 <&gpio1 16 0>,
                                 <&gpio0 5 0>,
                                 <&gpio0 3 0>;
-                pinctrl-names = "default", "gpio";
+                pinctrl-names = "default";
 		        pinctrl-0 = <&default_setting>;
-		        pinctrl-1 = <&gpio_setting>;
             };
         }; 
     };
