--- a/XIII_Interrupt/Interrupt_Legacy/Interrupt_Legacy.dts
+++ b/XIII_Interrupt/Interrupt_Legacy/Interrupt_Legacy.dts
@@ -1,11 +1,11 @@
 /dts-v1/;
 /plugin/;
 /*
-SW1  ---------------------- GPIO0_30       GPIO_30
-SW1  ---------------------- GPIO0_31       GPIO_31
-SW1  ---------------------- GPIO1_16       GPIO_48
-SW1  ---------------------- GPIO0_05       GPIO_05
-SW1  ---------------------- GPIO0_03       GPIO_03
+SW3  ---------------------- P9_12       GPIO_60
+SW1  ---------------------- P9_24       GPIO_15
+SW2  ---------------------- P9_26       GPIO_14
+SW4  ---------------------- P9_30       GPIO_112
+SW5  ---------------------- P9_42       GPIO_7
 */
 
 /{
@@ -15,11 +15,11 @@ SW1  ---------------------- GPIO0_03       GPIO_03
             __overlay__ {
                 default_setting: default_setting {
                     pinctrl-single,pins = <
-                        0x70  (1 << 3 | 1 << 5 | 7)
-                        0x74  (1 << 3 | 1 << 5 | 7)
-                        0x40  (1 << 3 | 1 << 5 | 7)
-                        0x15c (1 << 3 | 1 << 5 | 7)
-                        0x154 (1 << 3 | 1 << 5 | 7)
+                        0x78  (1 << 3 | 1 << 5 | 7)         /* P9_12 */
+                        0x184 (1 << 3 | 1 << 5 | 7)         /* P9_24 */
+                        0x180 (1 << 3 | 1 << 5 | 7)         /* P9_26 */
+                        0x198 (1 << 3 | 1 << 5 | 7)         /* P9_30 */
+                        0x164 (1 << 3 | 1 << 5 | 7)         /* P9_42 */
                     >;
                 };
             };
@@ -32,11 +32,6 @@ SW1  ---------------------- GPIO0_03       GPIO_03
                 compatible = "Interrupt_Pinmux";
                 author = "QuangNM13";
                 status = "okay";
-                gpio_pin-gpios = <&gpio0 30 0>,
-                                <&gpio0 31 0>,
-                                <&gpio1 16 0>,
-                                <&gpio0 5 0>,
-                                <&gpio0 3 0>;
                 pinctrl-names = "default";
 		        pinctrl-0 = <&default_setting>;
             };
