--- a/XII_PWM/Makefile
+++ b/XII_PWM/Makefile
@@ -4,6 +4,7 @@ PHONY: all clean move
 BBB_KERNEL := /home/quangnm/Desktop/buildBBB/kernelbuildscripts/KERNEL
 TOOLCHAIN := /home/quangnm/Desktop/buildBBB/kernelbuildscripts/dl/gcc-8.5.0-nolibc/arm-linux-gnueabi/bin/arm-linux-gnueabi-
 C_FILE	:= pwmDriver
+OVERLAY_FILE := pwmDriver
 obj-m := $(C_FILE).o
 BEAGLEBONE_PASSWORD := temppwd
 BEAGLEBONE_IP := 192.168.16.103
@@ -11,10 +12,13 @@ BEAGLEBONE_HOME_PATH := debian@$(BEAGLEBONE_IP):/home/debian
 
 all:
 	@make -C $(BBB_KERNEL) M=$(shell pwd) clean
+#	@rm -rf $(OVERLAY_FILE).dtbo
 	@make ARCH=arm CROSS_COMPILE=$(TOOLCHAIN) -C $(BBB_KERNEL) M=$(shell pwd) modules
+#	@dtc -@ -I dts -O dtb -o $(OVERLAY_FILE).dtbo $(OVERLAY_FILE).dts
 
 clean:
 	@make -C $(BBB_KERNEL) M=$(shell pwd) clean
+#	@rm -rf $(OVERLAY_FILE).dtbo
 
 move:
 	sshpass -p $(BEAGLEBONE_PASSWORD) scp $(C_FILE).ko $(BEAGLEBONE_HOME_PATH)
