--- a/XIII_Interrupt/Interrupt_To_Userspace/Makefile
+++ b/XIII_Interrupt/Interrupt_To_Userspace/Makefile
@@ -3,8 +3,8 @@ PHONY: all clean move
 
 BBB_KERNEL := /home/quangnm/Desktop/buildBBB/kernelbuildscripts/KERNEL
 TOOLCHAIN := /home/quangnm/Desktop/buildBBB/kernelbuildscripts/dl/gcc-8.5.0-nolibc/arm-linux-gnueabi/bin/arm-linux-gnueabi-
-OVERLAY_FILE := Interrupt_Legacy
-C_FILE	:= Interrupt_Legacy
+OVERLAY_FILE := Interrupt_To_Userspace
+C_FILE	:= Interrupt_To_Userspace
 obj-m := $(C_FILE).o
 BEAGLEBONE_PASSWORD := temppwd
 BEAGLEBONE_IP := 192.168.16.103
