--- a/XX_MOCK2/Makefile
+++ b/XX_MOCK2/Makefile
@@ -3,21 +3,22 @@ PHONY: all clean
 
 BBB_KERNEL := /home/quangnm/Desktop/buildBBB/kernelbuildscripts/KERNEL
 TOOLCHAIN := /home/quangnm/Desktop/buildBBB/kernelbuildscripts/dl/gcc-8.5.0-nolibc/arm-linux-gnueabi/bin/arm-linux-gnueabi-
-C_FILE	:= ILI9341
-obj-m := $(C_FILE).o
+Driver_FILE	:= ILI9341_driver
+obj-m := ILI9341_driver.o
+ILI9341_driver-objs := ILI9341.o ILI9341_ctrl.o 
+
 BEAGLEBONE_PASSWORD := temppwd
-BEAGLEBONE_IP := 192.168.16.106
+BEAGLEBONE_IP := 192.168.16.101
 BEAGLEBONE_HOME_PATH := debian@$(BEAGLEBONE_IP):/home/debian
 
 first:
-	scp $(C_FILE).ko $(BEAGLEBONE_HOME_PATH)
+	scp $(C_Driver_FILEFILE).ko $(BEAGLEBONE_HOME_PATH)
 
 all:
-	@make -C $(BBB_KERNEL) M=$(shell pwd) clean
 	@make ARCH=arm CROSS_COMPILE=$(TOOLCHAIN) -C $(BBB_KERNEL) M=$(shell pwd) modules
 
 move:
-	sshpass -p $(BEAGLEBONE_PASSWORD) scp $(C_FILE).ko $(BEAGLEBONE_HOME_PATH)
+	sshpass -p $(BEAGLEBONE_PASSWORD) scp $(Driver_FILE).ko $(BEAGLEBONE_HOME_PATH)
 
 clean:
 	@make -C $(BBB_KERNEL) M=$(shell pwd) clean
