--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
         "typeinfo": "c",
         "ssd1306.h": "c",
         "ioctl.h": "c",
-        "stdlib.h": "c"
+        "stdlib.h": "c",
+        "ili9341.h": "c"
     }
 }
