--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
         "ssd1306.h": "c",
         "ioctl.h": "c",
         "stdlib.h": "c",
-        "ili9341.h": "c"
+        "ili9341.h": "c",
+        "ili9341_gui.h": "c"
     }
 }
